[package]
name = "gall"
description = "Manage Git repositories with gall!"
version = "0.1.0"
edition = "2021"

[dependencies]
gix = { version = "0.44", features = ["prodash", "progress-tree"] }

# CLI and error handling
clap = { version = "4", features = ["derive", "cargo"] }
thiserror = "1"
anyhow = "1"
time = "0.3"
crosstermion = "0.11"
logger = "0.4"
env_logger = "0.10"
futures-lite = "1.13"
jwalk = "0.8"

[dependencies.prodash]
version = "25"
features = [
    "progress-log",
    "render-line",
    "render-line-crossterm",
    "render-line-autoconfigure",
    "render-tui",
    "render-tui-crossterm",
    "unit-human",
    "unit-duration",
]

[dev-dependencies]
bacon = "2"
