[package]
name = "gall"
description = "Manage Git repositories with gall!"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI and error handling
clap = { version = "4", features = ["derive", "cargo"] }
exn = "0.3.0"
thiserror = "2"
time = "0.3"
crosstermion = { version = "0.16.0", optional = true, default-features = false }
prodash = { version = "31.0.0", features = [
    "render-line",
    "render-line-crossterm",
] } # transitive dependency of gitoxide-core
shellexpand = "3"
logger = "0.4"
env_logger = "0.11"
futures-lite = "2"
dirs = "6"

gix = { version = "0.78.0", default-features = false, features = [
    "command",
    "status",
    "interrupt",
    "max-control",
    "progress-tree",
] }
gitoxide-core = { version = "0.53.0", default-features = false, features = [
    "organize",
] }

[dev-dependencies]
bacon = "3"
